test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specification_underflow_value.sol
contract A layout at 0 - 1 {}
// ----
// TypeError 1763: (21-26): Storage layout cannot be specified by a number exceeding the range of type uint256. Current type is int_const -1 Cannot implicitly convert signed literal to unsigned type.
